# mpdbtool

./: .gitignore  .gitmodules  Cargo.toml  mpdbtoolconfig.toml
src/: cli.rs  main.rs  mpdb.rs  slug.rs
src/setlists/: mod.rs
src/tests/: mod.rs  xml_tests.rs
