[package]
name = "mpdbtool"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde-xml-rust = "0.6.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
config = "0.15.8"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
